修改网站为暗黑背景

--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -25,6 +25,7 @@ td {
 
 /*设置默认字体*/
 body {
+  background-color: black;
   font-size: 14px;
   font-style: normal;
   font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
